tests/baselines/reference/computedEnumMemberSyntacticallyString(isolatedmodules=true).errors.txt
computedEnumMemberSyntacticallyString.ts(4,9): error TS18033: Type 'string' is not assignable to type 'number' as required for computed enum member values.
computedEnumMemberSyntacticallyString.ts(5,9): error TS18033: Type 'string' is not assignable to type 'number' as required for computed enum member values.


==== computedEnumMemberSyntacticallyString.ts (2 errors) ====
    const BAR = 2..toFixed(0);
    
    enum Foo {
        A = `${BAR}`,
            ~~~~~~~~
!!! error TS18033: Type 'string' is not assignable to type 'number' as required for computed enum member values.
        B = "2" + BAR,
            ~~~~~~~~~
!!! error TS18033: Type 'string' is not assignable to type 'number' as required for computed enum member values.
    }
    